# Code_Desafio_2

./: .gitignore  Desafio_2_16_04_2026.docx  README.md
Code_D2/: CMakeLists.txt  Grupo_A_Simulado.csv  Grupo_B_Simulado.csv  Grupo_C_Simulado.csv  Grupo_D_Simulado.csv  Grupo_E_Simulado.csv  Grupo_F_Simulado.csv  Grupo_G_Simulado.csv  Grupo_H_Simulado.csv  Grupo_I_Simulado.csv  Grupo_J_Simulado.csv  Grupo_K_Simulado.csv  Grupo_L_Simulado.csv  Posiciones_Finales_Mundial_2026.csv  Resumen_Eliminatorias_2026.csv  main.cpp
